--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme 
+
+title: [Repertório de músicas]
+description: [Letras para cantar de acordo com os ensaios]
+
