--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-title: Repertório de músicas
-
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme 
-
+title: Songbook
 description: [Letras para cantar de acordo com os ensaios]
 
